<package>
  <name>plen_msgs</name>
  <version>1.0.0</version>
  <description>
    plen_msgs provides messages for PLEN robots.
  </description>
  <maintainer email="support@plen.jp">PLEN Project Company Inc.</maintainer>
  <license></license>

  <url>https://github.com/plenprojectcompany/plen-Firmware_ROS</url>
  <author>Tatsuroh Sakaguchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
